# algorithms

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
.github/workflows/: Linter.yml  build.yml
lib/: CMakeLists.txt
lib/Algorithms/: Sort.hpp  Utils.hpp
lib/Algorithms/Sort/: BubbleSort.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp
src/: CMakeLists.txt  SampleData.h  Utils.h  main.cpp
src/Sorts/: Bubble.h  Insertion.h  Merge.h  Quick.h
tests/: CMakeLists.txt  SortTests.cpp
